# Bases-no-relacionales-Equipo-3

./: .gitignore  INSTRUCTIVO_DESPLIEGUE.md  INSTRUCTIVO_ROLES_INTERCAMBIABLES.md  README.md  config.py  env.example  pipeline_orchestrator.py  pyproject.toml
Documentacion/: ARQUITECTURA_TECNICA.md  COMO_CORRER.md  INSTRUCTIVO_DESPLIEGUE.md  INSTRUCTIVO_ROLES_INTERCAMBIABLES.md  README.md  instructivo_despliegue.docx
analisis/: opensky_neo4j_queries.ipynb
api/: auth.py  keys.json  main.py  queries.py  requirements.txt
infra/cassandra/: cassandra-cluster.docker-compose.yml  cassandra_infra.ipynb
infra/cassandra/cluster_certs/: ca.crt  ca.keystore
infra/docker/: dockerfile.spark-jupyter
infra/neo4j/: neo4j.docker-compose.yml  neo4j_infra.ipynb
infra/spark/: dockerfile.spark-job-venv  spark-cluster.docker-compose.yml  spark_infra.ipynb
ingesta/: opensky_to_cassandra.py
opensky-pipeline/: gitignore  pipeline_orchestrator.py
procesamiento/: cassandra_to_neo4j_spark.py
setup/: api_users_setup.py  cassandra_schema_migration.py  load_airports.py  neo4j_setup_indexes.py  test_load_cassandra.py
